[package]
name = "todo-list-app"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
serde = { version ="1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
crossterm = "0.28.1"
ratatui = "0.28.1"
color-eyre = "0.6.3"

[[bin]]
name = "todo"
path = "src/main.rs"
